--- a/family2family/build.gradle
+++ b/family2family/build.gradle
@@ -33,5 +33,7 @@ dependencies {
     compile("org.webjars.npm:react-dom:15.0.1")
 
     // Test Dependencies
+    compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
+    compile("org.springframework.boot:spring-boot-starter-data-rest:${springBootVersion}")
     testCompile("junit:junit:4.12")
 }
