--- a/family2family/src/main/resources/application.yml
+++ b/family2family/src/main/resources/application.yml
@@ -28,3 +28,8 @@ spring:
 google:
   oauth2:
     redirectUri: http://f2f-app1.nisc.coop:8080/
+=======
+spring:
+  data:
+    rest:
+      basePath: /internal-api
