--- a/family2family/src/main/resources/application.yml
+++ b/family2family/src/main/resources/application.yml
@@ -1,3 +1,7 @@
 management:
   security:
     enabled: true
+google:
+  oauth2:
+    clientId: <YOUR_CLIENT_ID>
+    clientSecret:  <YOUR_CLIENT_SECRET>
