--- a/family2family/src/main/resources/application.yml
+++ b/family2family/src/main/resources/application.yml
@@ -8,3 +8,6 @@ google:
     clientId: ${GOOGLE_CLIENT_ID}
     clientSecret: ${GOOGLE_CLIENT_SECRET}
     redirectUri: http://localhost:8080/login
+org:
+  cbtf:
+    apiRoot: /api
