Adding OpenID Connect Support for Google (#3)
* Oath Works

* Refactor security package

* Adding Client Mapping to serve web page

* Extracting fields for OAuth2 Client and adding email scope

* Code cleanup, documentation, Readme

* Separating user mapping from Hello World

* Renaming controller so it is consistent with standard.

* Adding oauth keys for testing purposes

--- a/family2family/src/main/resources/application.yml
+++ b/family2family/src/main/resources/application.yml
@@ -1,3 +1,15 @@
 management:
   security:
     enabled: true
+google:
+  oauth2:
+    accessTokenUri: https://www.googleapis.com/oauth2/v3/token
+    authorizationUri: https://accounts.google.com/o/oauth2/auth
+    #Hard coded defaults for ease of development.
+    clientId: ${GOOGLE_CLIENT_ID:192263123742-0fbs59m5fscnfoc2trj91m0mmp9aceva.apps.googleusercontent.com}
+    clientSecret: ${GOOGLE_CLIENT_SECRET:LichVdx3CO3Avf7QUqfD04LQ}
+    redirectUri: http://localhost:8080/login
+    userInfoUri: https://www.googleapis.com/oauth2/v2/userinfo
+org:
+  cbtf:
+    apiRoot: /api
