--- a/family2family/build.gradle
+++ b/family2family/build.gradle
@@ -25,8 +25,12 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
     compile("org.springframework.security.oauth:spring-security-oauth2:${springOauthVersion}")
 
-    // Third-party webjar dependencies
     compile("org.webjars:bootstrap:3.3.7")
+    compile("org.webjars:jquery:3.1.1")
+    compile("org.webjars:react:15.3.2")
+    compile("org.webjars.bower:toastr:2.1.3")
+    compile("org.webjars.npm:babel-core:5.8.25")
+    compile("org.webjars.npm:react-dom:15.0.1")
 
     // Test Dependencies
     testCompile("junit:junit:4.12")
