--- a/family2family/src/main/resources/application.yml
+++ b/family2family/src/main/resources/application.yml
@@ -13,3 +13,18 @@ google:
 org:
   cbtf:
     apiRoot: /api
+
+---
+
+spring:
+  profiles: develop
+google:
+  oauth2:
+    redirectUri: http://f2f-app2.nisc.coop:8080/
+---
+
+spring:
+  profiles: production
+google:
+  oauth2:
+    redirectUri: http://f2f-app1.nisc.coop:8080/
