--- a/family2family/build.gradle
+++ b/family2family/build.gradle
@@ -23,7 +23,10 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
     compile("org.springframework.boot:spring-boot-starter-thymeleaf:${springBootVersion}")
     compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
+    compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
+    compile("org.springframework.boot:spring-boot-starter-data-rest:${springBootVersion}")
     compile("org.springframework.security.oauth:spring-security-oauth2:${springOauthVersion}")
+    compile("com.h2database:h2")
 
     compile("org.webjars:bootstrap:3.3.7")
     compile("org.webjars:jquery:3.1.1")
@@ -33,7 +36,5 @@ dependencies {
     compile("org.webjars.npm:react-dom:15.0.1")
 
     // Test Dependencies
-    compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
-    compile("org.springframework.boot:spring-boot-starter-data-rest:${springBootVersion}")
     testCompile("junit:junit:4.12")
 }
