--- a/family2family/build.gradle
+++ b/family2family/build.gradle
@@ -1,7 +1,6 @@
 buildscript {
     ext {
         springBootVersion = '1.5.2.RELEASE'
-        springOauthVersion = '2.0.4.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -11,12 +10,17 @@ buildscript {
     }
 }
 
+// Update appropriately for releases
+version = '1.0.0-SNAPSHOT'
+
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
+jar.archiveName = "family2family.${jar.extension}"
 
 dependencies {
     compile("com.google.guava:guava:21.0")
@@ -26,7 +30,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-data-rest")
-    compile("org.springframework.security.oauth:spring-security-oauth2:${springOauthVersion}")
+    compile("org.springframework.security.oauth:spring-security-oauth2")
     compile("com.h2database:h2")
 
     compile("org.webjars:bootstrap:3.3.7")
@@ -39,4 +43,9 @@ dependencies {
     // Test Dependencies
     testCompile("junit:junit:4.12")
     testCompile("org.springframework.boot:spring-boot-starter-test")
+}
+
+springBoot {
+    // Provides build metadata in the META-INF directory
+    buildInfo()
 }
