--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: java
 jdk:
   - oraclejdk8
+
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/3304d728b496e2e3e7aa
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
