--- a/family2family/build.gradle
+++ b/family2family/build.gradle
@@ -7,8 +7,11 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("com.moowork.gradle:gradle-node-plugin:0.12")
     }
+}
+
+plugins {
+    id "com.moowork.node" version "1.1.1"
 }
 
 // Update appropriately for releases
@@ -17,7 +20,6 @@ version = '1.0.0-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
-apply plugin: "com.moowork.node"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -52,16 +54,7 @@ springBoot {
     buildInfo()
 }
 
-task webpack(type: NodeTask, dependsOn: 'npmInstall') {
-    def osName = System.getProperty("os.name").toLowerCase();
-    if (osName.contains("windows")) {
-        script = project.file('node_modules/webpack/bin/webpack.js')
-    } else {
-        script = project.file('node_modules/.bin/webpack')
-    }
+task bundleJs(type: NpmTask, dependsOn: 'npmInstall') {
+    // install the express package only
+    args = ['run', 'build']
 }
-
-processResources.dependsOn 'webpack'
-
-clean.delete << file('node_modules')
-clean.delete << file('src/main/webapp/dist')
