--- a/family2family/package.json
+++ b/family2family/package.json
@@ -13,6 +13,8 @@
     "babel-preset-react": "^6.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "webpack": "^2.3.3"
   }
 }
