--- a/family2family/package.json
+++ b/family2family/package.json
@@ -6,13 +6,22 @@
     "dev": "webpack -d --watch",
     "build": "webpack -p"
   },
-  "dependencies": {
+  "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "css-loader": "^0.28.3",
+    "style-loader": "^0.18.1",
+    "url-loader": "^0.5.8",
+    "file-loader": "^0.11.1",
+    "webpack": "^2.3.3",
+    "webpack-dev-server": "^2.4.2"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "webpack": "^2.3.3"
+    "react-bootstrap": "^0.30.8",
+    "babel-preset-es2015": "^6.24.0"
   }
 }
